--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "e-commerce",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.7.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.15",
+    "dotenv": "^8.2.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
